@@ -1,5 +1,10 @@
 # $Id$
 
+2008-12-29	Ivan Y. Khvostishkov
+
+	* main/DAOs/GenericDAO.class.php: makeTotalCountQuery() extracted from
+	worker by means of refactoring.
+
 2008-12-26	Ivan Y. Khvostishkov
 
 	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php:
